some small adds